--- a/src/app/core/component/alerta/alerta.component.html
+++ b/src/app/core/component/alerta/alerta.component.html
@@ -22,7 +22,7 @@
           {{this.message}}
         </ion-item>
       <ion-item>
-        <ion-button (click)="deleteMedia()" expand="block" fill="outline">
+        <ion-button (click)="presentActionSheet()" expand="block" fill="outline">
           Eliminar
         </ion-button>
       </ion-item>
