--- a/src/app/core/component/area/area.component.html
+++ b/src/app/core/component/area/area.component.html
@@ -1,25 +1,5 @@
-<ion-content id="content">
-  <ion-grid>
-    <ion-row >
-      <ion-col sizeMd="4" *ngFor="let d of data">
-        <ion-card >
-          <ion-img src="./assets/marvel.jpg"></ion-img>
-          <ion-card-title> 
-            {{d.media_name}}
-          </ion-card-title>
-          <ion-card-content>  
-            <div>
-              {{d.date}}
-            </div>
-            <div>
-              {{d.score}}
-            </div>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-</ion-content>
+<h1>Hola</h1> 
+
 
 
 
