--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -123,3 +123,7 @@ ion-segment.segment-scrollable::-webkit-scrollbar {
   --background: red;
   /* Establecer el ancho al 50% */
 }
+
+.botones{
+  --background: none;
+}
